[package]
name = "pike"
version = "0.1.3"
authors = ["rzvxa <rzvxa@protonmail.com>"]
description = "A macro collection to pipe |> your functions calls, like in F# or Elixir."
edition = "2021"
keywords = ["pipe", "function", "elixir", "macro", "composition"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rzvxa/pike"
homepage = "https://github.com/rzvxa/pike"
